--- a/styles/product.css
+++ b/styles/product.css
@@ -847,7 +847,7 @@ section
 {
 	font-size: 60px;
 	font-weight: 600;
-	color: #FFFFFF;
+	color: black;
 	line-height: 1.2;
 }
 .home_title span
@@ -860,7 +860,7 @@ section
 }
 .home_text p
 {
-	color: #FFFFFF;
+	color: black;
 }
 
 /*********************************
